# pathscope-st

./: .gitignore  BASELINE_REFERENCES.md  LICENSE  README.md  REFERENCES_AND_DATASETS.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ALLOWED_BASELINE_CONTEXTS.md
evidence/: summary.json
scripts/: check_independence.sh
src/pathscope_st/: __init__.py  adapters.py  claim_status.py  cli.py  contracts.py  data_paths.py  gate3.py  metrics.py  parity.py  real_smoke.py  result_wiring.py  results_contract.py  results_contract.sha256  same_split_baseline.py  smoke.py  validation.py
tests/: test_brand_independence.py  test_claim_status_unlock.py  test_contracts.py  test_gate2_parity.py  test_gate2_real_baseline.py  test_gate3_analysis.py  test_real_data_smoke.py  test_results_contract_wiring.py  test_synthetic_smoke.py
